PHASE1_VALIDATION_OUT.txt
  File "<string>", line 47
    report.append('    - process_query(query: str, context: str = \
                  ^
SyntaxError: unterminated string literal (detected at line 47)
